# mifqc

./: Dockerfile  README.md  pyproject.toml
mifqc/: __init__.py  cell_table.py  cli.py  entire_cell_table.py  entire_image.py  image_base.py  io_utils.py  plotting.py  qc_metrics.py  tiled_cell_table.py  tiled_image.py
tests/: test_basic.py
